<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_beer_cv_parentLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@drawable/round_corners">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/item_aciv_banner"
            android:layout_width="@dimen/banner_witdh"
            android:layout_height="@dimen/banner_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_actv_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_14dp"
            android:text="@string/item_label_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/item_label_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_aciv_banner"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_actv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_14dp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/item_label_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_aciv_banner"
            app:layout_constraintTop_toBottomOf="@id/item_actv_name_label"
            tools:text="3 - D Man" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_actv_original_title_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_14dp"
            android:text="@string/item_label_original_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/item_label_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_aciv_banner"
            app:layout_constraintTop_toBottomOf="@id/item_actv_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_actv_original_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_14dp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/item_label_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_aciv_banner"
            app:layout_constraintTop_toBottomOf="@id/item_actv_original_title_label"
            tools:text="título original" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_actv_description_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_14dp"
            android:text="@string/item_label_description"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/item_label_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_aciv_banner"
            app:layout_constraintTop_toBottomOf="@id/item_actv_original_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_actv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_14dp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/item_label_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_aciv_banner"
            app:layout_constraintTop_toBottomOf="@id/item_actv_description_label"
            tools:text="No se que lleve aqui" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_actv_release_date_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_14dp"
            android:text="@string/item_label_release_date"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/item_label_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_aciv_banner"
            app:layout_constraintTop_toBottomOf="@id/item_actv_description" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_actv_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_14dp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/item_label_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_aciv_banner"
            app:layout_constraintTop_toBottomOf="@id/item_actv_release_date_label"
            tools:text="2022-01-05" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/item_cg_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_aciv_banner"
            app:layout_constraintTop_toBottomOf="@id/item_actv_release_date">

            <com.google.android.material.chip.Chip
                android:id="@+id/item_chip_series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_chip_favorites"
                android:textColor="@color/secondary_variant"
                app:chipBackgroundColor="@color/colorPrimary"
                app:chipStrokeColor="@color/colorPrimaryDark"
                app:chipStrokeWidth="2dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/item_chip_comics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_chip_similar"
                android:textColor="@color/secondary_variant"
                app:chipBackgroundColor="@color/colorPrimary"
                app:chipStrokeColor="@color/colorPrimaryDark"
                app:chipStrokeWidth="2dp" />

        </com.google.android.material.chip.ChipGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>